--- a/css/style.css
+++ b/css/style.css
@@ -570,6 +570,7 @@ li{
     font-weight: 300;
     color: #777777;
     margin-bottom: 40px;
+    width: 300px;
 }
 
 .record__number{
@@ -775,6 +776,764 @@ li{
     color: #dadada;
     margin: 0;
 }
+
+.doctors-block__card{
+    background-color: #fff;
+    padding-left: 0;
+    padding: 0;
+    border: none;
+    width: 500px;
+    margin-right: auto;
+    height: auto;
+    margin-bottom: 56px;
+}
+
+.doctors-block__card:not(:last-child){
+    margin-right: auto;
+}
+
+.doctors-block__card:nth-child(2n){
+    margin-right: 0px;
+}
+
+.doctors-block__card:nth-child(-2n){
+    margin-bottom: 0px;
+}
+
+.doctors-block__position{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.doctors-block__card .price-doctors{
+    margin-bottom: 20px;
+}
+
+.doctors-block__card .doctors-btn{
+    width: 208px;
+    height: 40px;
+    border: 1px solid #067881;
+    border-radius: 5px;
+    background-color: #fff;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 300;
+    color: #067881;
+}
+
+.doctors-block{
+    padding-top: 86px;
+    padding-bottom: 46px;
+}
+
+.section__stocks{
+    padding-top: 86px;
+    padding-bottom: 92px;
+}
+
+.stocks__position{
+    display: flex;
+    align-items: flex-start;
+}
+
+.stocks__text-position{
+    width: 765px;
+    margin-right: auto;
+}
+
+.stocks__img{
+    width: 352px;
+    height: 272px;
+}
+
+.stocks__text{
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 24px;
+}
+
+.stocks__text{
+    margin-bottom: 20px;
+}
+
+.main__analiz{
+    padding-top: 86px;
+    padding-bottom: 93px;
+}
+
+.filter__input{
+    width: 312px;
+    height: 48px;
+    border: 1px solid #bbbbbb;
+    font-size: 16px;
+    line-height: 1.2;
+    font-weight: 300;
+    color: #999999;
+    padding-left: 16px;
+}
+
+.filter__input::placeholder{
+    font-size: 16px;
+    line-height: 1.2;
+    font-weight: 300;
+    color: #999999;
+}
+
+.filter-form{
+    width: 312px;
+}
+
+.filter-form .input-btn{
+    width: 39px;
+    height: 47px;
+    background-size: 20px;
+}
+
+.input-position{
+    display: block;
+    position: relative;
+}
+
+.filter-btn{
+    width: 312px;
+    height: 48px;
+    border: 1px solid #bbbbbb;
+    text-align: left;
+    padding-left: 16px;
+    font-size: 16px;
+    line-height: 1.2;
+    font-weight: 300;
+    color: #000000;
+    background: url('../img/ico_filter_19520.png') no-repeat 98% 50%;
+    background-color: unset;
+}
+
+.filter-btn:not(:last-child){
+    margin-bottom: 16px;
+}
+
+.filter-btn:first-of-type{
+    margin-top: 16px;
+}
+
+.analiz__filter{
+    width: 312px;
+    margin-right: 40px;
+}
+
+.analiz__block-position{
+    display: flex;
+}
+
+.researches-table__link {
+    width: 500px;
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 700;
+    color: #000000;
+    margin-right: 42px;
+    cursor: pointer;
+}
+
+.researches__upper-line {
+    display: flex;
+    align-items: flex-end;
+    margin-right: 85px;
+    position: relative;
+    top: -24px;
+}
+
+.researches-table__caption {
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 700;
+    color: #067881;
+    margin-bottom: 44px;
+}
+
+.researches-table__item:not(:last-child) {
+    margin-bottom: 42px;
+}
+.researches-table__item {
+    position: relative;
+}
+.researches-table__item {
+    display: flex;
+    align-items: flex-start;
+    border-bottom: 1px solid #dddddd;
+    padding-bottom: 25px;
+}
+
+.researches__upper-line {
+    display: flex;
+    align-items: flex-end;
+    margin-right: 85px;
+    position: relative;
+    top: -24px;
+}
+
+.researches__upper-code, .researches__upper-deadline {
+    font-size: 13px;
+    line-height: 24px;
+    font-weight: 400;
+    color: #999999;
+}
+
+.code{
+    display: block;
+    font-size: 14px;
+    color: #000000;
+    font-weight: 400;
+}
+
+.researches__upper-code, .researches__upper-deadline {
+    font-size: 13px;
+    line-height: 24px;
+    font-weight: 400;
+    color: #999999;
+}
+
+.researches__upper-deadline {
+    margin-right: 78px;
+}
+
+.researches__upper-code {
+    margin-right: 50px;
+}
+
+.researches__upper-price {
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 500;
+    color: #067881;
+}
+
+.researches__btn {
+    width: 40px;
+    height: 40px;
+    border: 1px solid #067881;
+    border-radius: 100%;
+    display: block;
+    background: url('../img/ico_cart_24_blue_19447.png') 50% no-repeat;
+    background-position: center;
+    position: relative;
+    background-size: 20px;
+    top: -8px;
+}
+
+.first-table {
+    margin-bottom: 61px;
+}
+
+.last-table {
+    margin-bottom: 69px;
+}
+
+.researches__description-text {
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 400;
+    color: #777777;
+    width: 427px;
+}
+
+.researches__description-list {
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 400;
+    color: #777777;
+    padding-left: 16px;
+    margin-top: 0;
+}
+
+.filter__popup {
+    position: absolute;
+    display: none;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    left: 50%;
+    top: 50%;
+    width: 1232px;
+    background-color: #fff;
+    -webkit-box-shadow: 0 3px 12px #ccc;
+    box-shadow: 0 3px 12px #ccc;
+    padding: 33px 40px 40px;
+    z-index: 4;
+    transform: translateX(-50%);
+}
+
+.filter__popup-close {
+    width: 32px;
+    height: 32px;
+    position: absolute;
+    right: 20px;
+    top: 18px;
+    background-color: unset;
+}
+
+.cross-img, .filter__popup-close, .select-mobile-wrap__close {
+    background-image: url(/local/templates/delement/frontend/assets/styles/../icons/ico_x.svg);
+    background-size: 24px;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+.filter__popup-title {
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.filter__popup-body {
+    padding-top: 16px;
+    padding-bottom: 16px;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #eee;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+}
+
+.filter__popup-items {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 30%;
+    flex: 1 1 30%;
+}
+
+.checkbox__input {
+    display: none;
+}
+
+.checkbox__analiz {
+    position: relative;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+}
+
+.checkbox__input:checked+.checkbox__emulator {
+    background-color: #00a9e0;
+    border-color: transparent;
+}
+
+.checkbox__emulator {
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    width: 16px;
+    height: 16px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    margin-top: 4px;
+    margin-right: 8px;
+    z-index: 1;
+    -webkit-transition: .2s;
+    transition: .2s;
+    background-color: transparent;
+    border: 1px solid #999;
+    cursor: pointer;
+}
+
+.checkbox__label {
+    font-size: 16px;
+    display: block;
+    cursor: pointer;
+    margin-top: -4px;
+}
+
+.filter__popup-scrollwrap {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 0%;
+    flex: 1 1 0%;
+    min-height: 0;
+    max-height: 415px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: relative;
+}
+
+.checkbox__input:checked+.checkbox__emulator .i-icon {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+}
+
+.checkbox__emulator .i-icon {
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    width: 10px;
+    height: 7px;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    -webkit-transition: -webkit-transform .2s;
+    transition: -webkit-transform .2s;
+    transition: transform .2s;
+    transition: transform .2s,-webkit-transform .2s;
+    margin: 0;
+    color: #fff;
+}
+
+svg:not(:root) {
+    overflow: hidden;
+}
+
+.i-icon {
+    background-repeat: no-repeat;
+    background-position: 50%;
+    display: inline-block;
+    vertical-align: middle;
+    width: 1em;
+    height: 1em;
+    fill: currentColor;
+}
+
+.scroll{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.filter__popup-item {
+    max-width: calc(33.33% - 80px);
+    -ms-flex-preferred-size: calc(33.33% - 80px);
+    flex-basis: calc(33.33% - 80px);
+}
+
+.filter__popup-items {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
+
+.filter__popup-footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+}
+
+.filter__popup-footer-btn:first-child {
+    max-width: 305px;
+    width: 100%;
+}
+.filter__popup-footer-btn:not(:last-child) {
+    margin-right: 8px;
+}
+
+.btn--blue {
+    border-color: transparent;
+    background-color: #00a9e0;
+    color: #fff;
+}
+
+.btn-filter{
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    font-size: 15px;
+    line-height: 1.2;
+    font-weight: 400;
+    text-align: center;
+    text-decoration: none;
+    color: #00a9e0;
+    background-color: #fff;
+    padding: 0 35px;
+    height: 40px;
+    border: 1px solid;
+    border-radius: 25px;
+    cursor: pointer;
+    outline: none;
+    -webkit-transition: .5s;
+    transition: .5s;
+}
+
+.btn--lg {
+    height: 48px;
+}
+
+.btn--blue {
+    border-color: transparent;
+    background-color: #00a9e0;
+    color: #fff;
+}
+
+.filter__popup-footer-btn:first-child .btn {
+    width: 100%;
+}
+
+.filter__popup-footer-btn .btn {
+    font-size: 16px;
+    white-space: nowrap;
+}
+
+.filter__popup-footer-btn .btn {
+    font-size: 16px;
+    white-space: nowrap;
+}
+.btn[disabled] {
+    border-color: #999;
+    color: #999;
+    opacity: .5;
+    cursor: default;
+}
+[type=reset], [type=submit], button, html [type=button] {
+    -webkit-appearance: button;
+}
+.btn--lg {
+    height: 48px;
+}
+.filter__popup-head {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding-bottom: 14px;
+    border-bottom: 1px solid #eee;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+}  
+
+.active-filter{
+    display: flex;
+}
+
+.disable-filter{
+    display: none;
+}
+
+.scroll::-webkit-scrollbar {
+    width: 3px;
+}
+
+.scroll::-webkit-scrollbar-track {
+    border-radius: 100%;
+    width: 1px;
+    background-color: #ddd;
+}
+
+.scroll::-webkit-scrollbar-thumb{
+    background: #999;
+    width: 3px;
+    position: absolute;
+}
+
+.filter-form .clean-input{
+    right: 50px;
+}
+
+#input2{
+    padding-right: 80px;
+}
+
+.contacts-text{
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 300;
+    color: #000000;
+    margin-bottom: 60px;
+}
+
+.text-decoration{
+    font-weight: 700;
+}
+
+.contacts__image-block{
+    width: 272px;
+    height: 168px;
+}
+
+.contacts__image-block:not(:last-child){
+    margin-right: auto;
+}
+
+.contacts__image-position{
+    display: flex;
+    margin-bottom: 64px;
+}
+
+.map{
+    width: 592px;
+    height: 448px;
+    margin-right: 112px;
+}
+
+.contacts__block-position{
+    display: flex;
+    margin-bottom: 72px;
+}
+
+.contacts__small-caption{
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 700;
+    color: #000000;
+    margin-bottom: 21px;
+}
+
+.contacts__info{
+    width: 435px;
+}
+
+.info__adress{
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 300;
+    color: #000000;
+    margin-bottom: 19px;
+    padding-left: 47px;
+    font-style: normal;
+    position: relative;
+}
+
+.info__adress::before{
+    content: "";
+    width: 25px;
+    height: 25px;
+    background: url('../img/ico_map.svg') no-repeat;
+    position: absolute;
+    left: 0;
+    background-size: cover;
+}
+
+.info__text{
+    font-size: 15px;
+    line-height: 24px;
+    font-weight: 300;
+    color: #999999;
+    margin-bottom: 30px;
+}
+
+.info__phone{
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 300;
+    color: #000000;
+    display: block;
+    position: relative;
+    padding-left: 47px;
+    margin-bottom: 30px;
+}
+
+.info__phone:first-of-type{
+    margin-bottom: 14px;
+}
+
+.info__phone:first-of-type::before{
+    content: "";
+    width: 25px;
+    height: 25px;
+    background: url('../img/ico_phone.svg') no-repeat;
+    position: absolute;
+    left: 0;
+    background-size: cover;
+}
+
+.info__mail{
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 300;
+    color: #000000;
+    margin-bottom: 30px;
+    padding-left: 47px;
+    position: relative;
+    display: block;
+}
+
+.info__mail::before{
+    content: "";
+    width: 25px;
+    height: 25px;
+    background: url('../img/ico_mail.svg') no-repeat;
+    position: absolute;
+    left: 0;
+    background-size: cover;
+}
+
+.info__time-text{
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 300;
+    color: #000000;    
+}
+
+.point__caption{
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 700;
+    color: #000000;
+    margin-bottom: 20px;
+}
+
+.point__text{
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 300;
+    color: #000000;
+}
+
+.point__text-block{
+    width: 470px;
+    margin-right: auto;
+}
+
+.info__scheme-position{
+    align-items: flex-start;
+}
+
+.info__scheme-position:not(:last-child){
+    margin-bottom: 75px;
+}
+
+.info__scheme-position:last-child{
+    margin-bottom: 96px;
+}
+
+.contacts-block{
+    padding-top: 86px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* Адаптив */
