--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,10 @@ li{
     color: #000000;
 }
 
+.stocks__text:last-child{
+    margin-bottom: 0;
+}
+
 .btn{
     border: none;
     outline: none;
@@ -147,6 +151,7 @@ li{
     height: 32px;
     display: inline-block;
     background: url('../img/ico_cart_gray.svg') 50% no-repeat;
+    background-size: cover;
     position: relative;
     top: 0px;
     right: 0px;
@@ -666,12 +671,37 @@ li{
     background-color: #1fa0aa;
 }
 
+.deases,.complex,.group{
+    position: absolute;
+    visibility: hidden;
+    opacity: 0;
+    top: -1000px;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    background: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    overflow-y: auto;
+    padding: 73px 0px;
+}
+
+.modal_active{
+    position: fixed;
+    top: 0;
+    visibility: visible;
+    opacity: 1;
+    transition: .3s;
+}
+
 /* Стили footer */
 
 .footer{
     background-color: #f5f5f5;
     padding-top: 68px;
-    padding-bottom: 53px;
+    padding-bottom: 93px;
 }
 
 .footer-position{
@@ -948,7 +978,7 @@ li{
     line-height: 24px;
     font-weight: 700;
     color: #000000;
-    margin-right: 42px;
+    margin-right: 73px;
     cursor: pointer;
 }
 
@@ -1418,7 +1448,16 @@ svg:not(:root) {
 }
 
 .contacts__info{
-    width: 435px;
+    width: 420px;
+}
+
+.cart__caption{
+    line-height: 48px;
+    margin-bottom: 68px;
+}
+
+.g-recaptcha{
+    margin-top: 22px;
 }
 
 .info__adress{
@@ -1576,6 +1615,32 @@ svg:not(:root) {
     display: none;
 }
 
+.swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet {
+    margin-right: 16px;
+}
+
+.filter__popup{
+    background-color: #fff;
+    position: relative;
+    padding: 36px 40px 40px;
+    max-width: 1233px;
+    width: 100%;
+    display: block;
+}
+
+.filter_active{
+    position: absolute;
+    top: -605px;
+    visibility: visible;
+    opacity: 1;
+    transition: .3s;
+}
+
+.deases,.complex,.group{
+    height: 2000px;
+    background-color: unset;
+    justify-content: left;
+}
 
 
 
@@ -1668,6 +1733,40 @@ svg:not(:root) {
         margin-right: 24px;
     }
 
+    .contacts__image-block {
+        width: 214px;
+        height: 132px;
+    }
+
+    .map {
+        width: 465px;
+        height: 352px;
+        margin-right: 39px;
+    }
+
+    .contacts__info {
+        width: 100%;
+    }
+
+    .point__img{
+        width: 484px;
+        height: 232px;
+    }
+
+    .point__text-block{
+        width: 450px;
+    }
+
+    .stocks__img {
+        width: 310px;
+        height: 239px;
+    }
+
+    .stocks__text-position {
+        width: 580px;
+        margin-right: auto;
+    }
+
 
 }
 
@@ -1677,6 +1776,15 @@ svg:not(:root) {
         padding-left: 16px;
         padding-right: 16px;
         width: 100%;
+    }
+
+    .record__container{
+        width: 100%;
+        padding: 0;
+    }
+
+    .nav__item-open::after{
+        border-bottom: 2px solid #fff !important;
     }
 
     .burger{
@@ -1976,6 +2084,81 @@ svg:not(:root) {
         bottom: -19px;
     }
 
+    .contacts__image-block{
+        width: 272px;
+        height: 168px;
+    }
+
+    .contacts__image-block:not(:last-child) {
+        margin-right: 48px;
+    }
+
+    .contacts__image-block:nth-child(2n) {
+        margin-right: 0px;
+    }
+
+    .margin__img{
+        margin-bottom: 48px;
+    }
+
+    .contacts__image-position{
+        width: 600px;
+        margin: 0 auto;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-bottom: 48px;
+    }
+
+    .contacts__block-position{
+        flex-direction: column;
+    }
+
+    .map {
+        width: 592px;
+        height: 448px;
+        margin: 0 auto;
+        margin-bottom: 43px;
+    }
+
+    .point__text-block {
+        width: 100%;
+        margin-bottom: 44px;
+    }
+
+    .point__img {
+        width: 616px;
+        height: 296px;
+        margin: 0 auto;
+    }
+
+    .info__scheme-position:last-child {
+        margin-bottom: 56px;
+    }
+
+    .contacts-block {
+        padding-top: 60px;
+    }
+
+    .stocks__position {
+        flex-direction: column-reverse;
+    }
+
+    .stocks__img {
+        width: 352px;
+        height: 272px;
+        margin-bottom: 43px;
+    }
+
+    .section__stocks {
+        padding-top: 67px;
+        padding-bottom: 92px;
+    }
+
+    .stocks__text-position {
+        width: 100%;
+        margin-right: 0;
+    }
+
 }
 
 @media (max-width: 767px){
@@ -2231,5 +2414,102 @@ svg:not(:root) {
         width: 100%;
         height: 100vh;
         overflow: auto;
+    }
+
+    .record__container{
+        width: 100%;
+        padding: 0;
+    }
+
+    .contacts-block {
+        padding-top: 47px;
+    }
+
+    .contacts-text{
+        font-size: 14px;
+        line-height: 18px;
+        font-weight: 300;
+        color: #000000;
+        margin-bottom: 36px;
+    }
+
+    .contacts__image-block {
+        max-width: 136px;
+        width: 100%;
+        height: auto;
+    }
+
+    .contacts__image-block:not(:last-child) {
+        margin-right: 16px;
+    }
+
+    .margin__img {
+        margin-bottom: 16px;
+    }
+
+    .contacts__image-block:nth-child(2n) {
+        margin-right: 0px;
+    }
+
+    .map{
+        max-width: 592px;
+        width: 100%;
+        height: 288px;
+    }
+
+    .point__img {
+        max-width: 616px;
+        width: 100%;
+        height: auto;
+        margin: 0 auto;
+    }
+
+    .contacts__image-position{
+        width: 100%;
+        margin-bottom: 16px;
+    }
+
+    .point__caption,.point__text{
+        font-size: 14px;
+        line-height: 14px;
+    }
+
+    .point__text-block {
+        width: 100%;
+        margin-bottom: 29px;
+    }
+
+    .disable-container{
+        padding: 0 !important;
+    }
+
+    .record__position {
+        align-items: initial;
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+    
+
+    .info__scheme-position:not(:last-child){
+        margin-bottom: 40px;
+    }
+
+    .stocks__img {
+        width: 100%;
+        height: auto;
+        margin-bottom: 38px;
+        max-width: 352px;
+    }
+
+    .stocks__text{
+        font-size: 16px;
+        line-height: 20px;
+        font-weight: 300;
+        color: #000000;
+    }
+
+    .section__stocks {
+        padding-top: 46px;
+        padding-bottom: 49px;
     }
 }
