--- a/css/open-results.css
+++ b/css/open-results.css
@@ -175,7 +175,7 @@ table tbody tr:nth-child(2n) {
 
 }
 
-@media (max-width: 1279px){
+@media (max-width: 1023px){
     
     .position-personal-info{
         padding-right: 0;
@@ -202,11 +202,15 @@ table tbody tr:nth-child(2n) {
         padding-bottom: 69px;
     }
 
+    .open__results-mobile-container{
+        padding-right: 0;
+    }
+
 
 }
 
 
-@media (max-width: 1279px){
+@media (max-width: 767px){
 
     .analiz-section {
         padding-top: 44px;
@@ -281,5 +285,14 @@ table tbody tr:nth-child(2n) {
     table {
         width: 775px;
         overflow: scroll;
+        margin-right: -16px;
+    }
+    
+    .table__overflov{
+        margin-right: -16px;
+    }
+
+    .open__results-mobile-container{
+        padding-right: 0;
     }
 }
