--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,9 @@ img{
 }
 
 input{
+    -webkit-appearance: none;
+    outline: none;
+    border-radius: 0;
     color: #000000;
 }
 
@@ -1642,7 +1645,13 @@ svg:not(:root) {
     justify-content: left;
 }
 
+.description__price-doctors{
+    line-height: 16px;
+}
 
+.doctors__list{
+    margin-bottom: 28px;
+}
 
 
 
@@ -1776,11 +1785,6 @@ svg:not(:root) {
         padding-left: 16px;
         padding-right: 16px;
         width: 100%;
-    }
-
-    .record__container{
-        width: 100%;
-        padding: 0;
     }
 
     .nav__item-open::after{
@@ -1999,6 +2003,10 @@ svg:not(:root) {
         z-index: 11;
         padding-top: 45px;
         height: 960px;
+
+        width: 100%;
+        height: 100vh;
+        overflow: auto
     }
 
     .overlay::before{
@@ -2167,6 +2175,11 @@ svg:not(:root) {
         padding-left: 16px;
         padding-right: 16px;
         width: 100%;
+    }
+
+    .record__container{
+        width: 100%;
+        padding: 0;
     }
 
     .btn__container{
@@ -2511,5 +2524,14 @@ svg:not(:root) {
     .section__stocks {
         padding-top: 46px;
         padding-bottom: 49px;
+    }
+
+    .card__buy-position, .doctors-position{
+        margin-right: -16px;
+    }
+
+    .where__phone-description {
+        font-size: 14px;
+        line-height: 18px;
     }
 }
