--- a/css/analiz.css
+++ b/css/analiz.css
@@ -245,5 +245,9 @@
         padding-bottom: 57px;
     }
 
+    .mobile-complex, .mobile-deases, .mobile-group{
+        padding-bottom: 46px;
+    }
+
 
 }
