--- a/css/analiz.css
+++ b/css/analiz.css
@@ -168,6 +168,10 @@
         overflow: auto;
     }
 
+    .mobile-complex, .mobile-deases, .mobile-group{
+        padding-bottom: 46px;
+    }
+
 }
 
 
